--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,5 +3,5 @@
 Contact us
 {% endblock %}
 {% block content %}
-<p>Contact page for the Visual Studio Code Flask tutorial.</p>
+<p>Contact Matthew Erler at matthew.erler@optum.com.</p>
 {% endblock %}
